Finalisation +roa +admin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 parts = django
 find-links = http://pypi.auf.org/auf_savoirs_en_partage_backend/
+    http://pypi.auf.org/auf_roa_authentification_backend/
 
 [django]
 recipe = djangorecipe
@@ -10,3 +11,4 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage_django
 eggs = auf_savoirs_en_partage_backend
+    auf_roa_authentification_backend
