--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 parts = django
 find-links = http://pypi.auf.org/auf_savoirs_en_partage_backend/
     http://pypi.auf.org/auf_roa_authentification_backend/
+    http://pypi.auf.org/caldav/
 
 [django]
 recipe = djangorecipe
@@ -12,3 +13,6 @@ settings = production
 extra-paths = auf_savoirs_en_partage_django
 eggs = auf_savoirs_en_partage_backend
     auf_roa_authentification_backend
+    caldav
+    pytz
+    django-timezones
