Scripts avec buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,9 @@
 [buildout]
-parts = django
+parts = django articles harvest
 find-links = http://pypi.auf.org/auf_savoirs_en_partage_backend/
-    http://pypi.auf.org/auf_roa_authentification_backend/
     http://pypi.auf.org/caldav/
+    http://pypi.auf.org/auf_references_client/
+    http://pypi.auf.org/auf_references_modeles/
 
 [django]
 recipe = djangorecipe
@@ -12,7 +13,17 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage_django
 eggs = auf_savoirs_en_partage_backend
-    auf_roa_authentification_backend
+    auf_references_client
     caldav
     pytz
     django-timezones
+
+[articles]
+recipe = buildout_script
+template_dir = ${buildout:directory}/auf_savoirs_en_partage_django/scripts/
+template = articles.in
+
+[harvest]
+recipe = buildout_script
+template_dir = ${buildout:directory}/auf_savoirs_en_partage_django/scripts/
+template = harvest.in
