--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ eggs = auf_savoirs_en_partage_backend
     caldav
     pytz
     django-timezones
+    feedparser
 
 [articles]
 recipe = buildout_script
