--- a/auf_savoirs_en_partage/scripts/harvest.in
+++ b/auf_savoirs_en_partage/scripts/harvest.in
@@ -12,7 +12,7 @@ sys.path[0:0] = [
 for d in glob.glob("%(directory)s/eggs/*"):
     sys.path[0:0] = [d,]
 
-os.environ['DJANGO_SETTINGS_MODULE'] = 'development'
+os.environ['DJANGO_SETTINGS_MODULE'] = 'production'
 
 
 from auf_savoirs_en_partage.savoirs.lib.harvest import import_all
