Restructuration de la configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ eggs = auf_references_client
     pytz
     django-timezones
     feedparser
+    django-roa
 
 [articles]
 recipe = buildout_script
