pagination/sorting dans repertoire

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,7 +18,9 @@ eggs = auf_references_client
     django-timezones
     feedparser
     django-roa
-
+    django_pagination
+    django_sorting
+    
 [articles]
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
@@ -28,3 +30,8 @@ template = articles.in
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
 template = harvest.in
+
+[import_chercheurs]
+recipe = buildout_script
+template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
+template = import_chercheurs.in
