Datamaster a la place de django-roa

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ parts = django articles harvest
 find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
-    http://pypi.auf.org/django-roa/
+    http://pypi.auf.org/datamaster_modeles/
 
 [django]
 recipe = djangorecipe
@@ -17,9 +17,9 @@ eggs = auf_references_client
     pytz
     django-timezones
     feedparser
-    django-roa
     django_pagination
     django_sorting
+    datamaster_modeles
     
 [articles]
 recipe = buildout_script
