Ajou de la bonne version de django-roa pour authentification

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
     http://pypi.auf.org/datamaster_modeles/
+    http://pypi.auf.org/django-roa/
 
 [django]
 recipe = djangorecipe
@@ -20,6 +21,7 @@ eggs = auf_references_client
     django_pagination
     django_sorting
     datamaster_modeles
+    django-roa
     
 [articles]
 recipe = buildout_script
