--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client
-    caldav
+    caldav==0.1.4auf
     pytz
     django-timezones
     feedparser
