ferme #460 ajout du dashboard pour connaitre les references à traiter

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,6 +22,7 @@ eggs = auf_references_client
     django_sorting
     datamaster_modeles
     django-roa
+    django-admin-tools
     
 [articles]
 recipe = buildout_script
