cablage de la nouvelle release de caldav

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client
-    caldav==0.1.4auf
+    caldav==0.1.4.1-auf
     pytz
     django-timezones
     feedparser
@@ -23,7 +23,9 @@ eggs = auf_references_client
     datamaster_modeles
     django-roa
     django-admin-tools
-    
+
+#develop = src/caldav
+
 [articles]
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
