cable la nouvelle release de caldav (lxml dep) et ajout de chardet dans les dependances

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,8 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client
-    caldav==0.1.4.1-auf
+    caldav==0.1.4.2-auf
+    chardet
     pytz
     django-timezones
     feedparser
