--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,5 @@
 [buildout]
+newest = false
 parts = django articles harvest
 find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
@@ -14,7 +15,7 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client
-    caldav==0.1.4.2-auf
+    caldav==0.1.4.3-auf
     chardet
     pytz
     django-timezones
