Meilleure gestion des fuseaux horaires lors de l'ajout d'un événement.
*   Les fuseaux sont maintenant présentés en français
*   SEP essaie de deviner dans quel fuseau l'utilisateur se trouve et fait une
    présélection.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,6 +15,7 @@ wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
 eggs = auf_references_client
+    babel
     caldav==0.1.4.3-auf
     chardet
     pytz
