Utilisation de django_compressor pour versioner les js et css.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -20,6 +20,8 @@ eggs = auf_references_client
     chardet
     pytz
     feedparser
+    BeautifulSoup
+    django_compressor
     django_pagination
     django_sorting
     datamaster_modeles
