Changé le PID file pour Sphinx

--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -230,7 +230,7 @@ indexer
 searchd
 {
     listen = 127.0.0.1:9312
-    pid_file = %%(pid_file)s
+    pid_file = /var/run/sphinx/sphinx-savoirsenpartage.pid
     log = %%(log)s
 }
-''' %% dict(pid_file=os.path.join(DATA_DIR, 'sphinx.pid'), log=os.path.join(DATA_DIR, 'searchd.log'))
+''' %% dict(log=os.path.join(DATA_DIR, 'searchd.log'))
