Changé l'emplacement du log de Sphinx

--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -231,6 +231,5 @@ searchd
 {
     listen = 127.0.0.1:9312
     pid_file = /var/run/sphinx/sphinx-savoirsenpartage.pid
-    log = %%(log)s
-}
-''' %% dict(log=os.path.join(DATA_DIR, 'searchd.log'))
+    log = /var/log/sphinx/searchd-savoirsenpartage.log
+}'''
