--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ eggs = auf_references_client
     django-roa
     django-admin-tools
     django-sphinx
+    django-flash
 
 #develop = src/caldav
 
