Désinscription des chercheurs
Conflicts:

	buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,6 +27,7 @@ eggs = auf_references_client
     datamaster_modeles
     django-roa
     django-admin-tools
+    django-flash
 
 #develop = src/caldav
 
