Retour à la situation pré-Sphinx

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 newest = false
-parts = django articles harvest sphinx_conf
+parts = django articles harvest
 find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
@@ -27,7 +27,6 @@ eggs = auf_references_client
     datamaster_modeles
     django-roa
     django-admin-tools
-    django-sphinx
 
 #develop = src/caldav
 
@@ -45,8 +44,3 @@ template = harvest.in
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
 template = import_chercheurs.in
-
-[sphinx_conf]
-recipe = buildout_script
-template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
-template = sphinx.conf.py.in
