--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -184,7 +184,7 @@ emit_source('savoirsenpartage_chercheurs',
                                   WHEN 'etudiant' THEN 2
                                   WHEN 'independant' THEN 3
                                   END AS statut,
-                      (ex.id IS NULL) AS expert
+                      (ex.id IS NOT NULL) AS expert
                FROM chercheurs_chercheur c
                INNER JOIN chercheurs_personne p ON c.personne = p.id
                LEFT JOIN ref_etablissement et ON et.id = c.etablissement
