--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,22 +14,25 @@ project = auf_savoirs_en_partage
 wsgi = true
 settings = production
 extra-paths = auf_savoirs_en_partage
-eggs = auf_references_client
-    babel
+eggs = auf_references_client==0.4.9
+    Babel==0.9.5
     caldav==0.1.4.3-auf
-    chardet
-    pytz
-    feedparser
-    BeautifulSoup
-    django_compressor
-    django_pagination
-    django_sorting
-    datamaster_modeles
-    django-roa
-    django-admin-tools
-    django-sphinx
-    django-flash
-    PyYAML
+    chardet==1.0.1
+    pytz==2010l
+    feedparser==4.1
+    BeautifulSoup==3.1.0.1
+    django_compressor==0.5.3
+    django_pagination==1.0.7
+    django_sorting==0.1
+    datamaster_modeles==0.1.10
+    django-roa==2.6.2
+    django-admin-tools==0.3.0
+    django-sphinx==2.2.3
+    django-flash==1.7.2
+    PyYAML==3.09
+    South==0.7.3
+    MySQL-python==1.2.3
+    simplejson==2.1.2
 
 #develop = src/caldav
 
