--- a/buildout.cfg
+++ b/buildout.cfg
@@ -31,7 +31,7 @@ eggs = auf_references_client==0.4.9
     django-flash==1.7.2
     PyYAML==3.09
     South==0.7.3
-    MySQL-python==1.2.3
+    MySQL-python
     simplejson==2.1.2
 
 #develop = src/caldav
