Ne pas demander une version spécifique de simplejson

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,7 +32,7 @@ eggs = auf_references_client==0.4.9
     PyYAML==3.09
     South==0.7.3
     MySQL-python
-    simplejson==2.1.2
+    simplejson
 
 #develop = src/caldav
 
