Export de chercheurs CSV et ODS
Demande #1169

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_modeles/
     http://pypi.auf.org/datamaster_modeles/
     http://pypi.auf.org/django-roa/
+    http://pypi.auf.org/django_exportateur/
 
 [django]
 recipe = djangorecipe
@@ -31,6 +32,7 @@ eggs = auf_references_client==0.4.9
     django-flash==1.7.2
     PyYAML==3.09
     South==0.7.3
+    django_exportateur==1.0
     MySQL-python
     simplejson
 
