--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/datamaster_modeles/
     http://pypi.auf.org/django-roa/
     http://pypi.auf.org/django_exportateur/
+    http://pypi.auf.org/auf.django.admingroup/
 
 [django]
 recipe = djangorecipe
@@ -33,6 +34,7 @@ eggs = auf_references_client==0.4.9
     PyYAML==3.09
     South==0.7.3
     django_exportateur==1.0
+    auf.django.admingroup
     MySQL-python
     simplejson
 
