Fils RSS pour toutes les briques

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,6 +34,7 @@ eggs = auf_references_client==0.4.9
     PyYAML==3.09
     South==0.7.3
     django_exportateur==1.0
+    python-dateutil==1.5
     auf.django.admingroup
     MySQL-python
     simplejson
