--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -92,6 +92,7 @@ emit_source('savoirsenpartage_ressources',
                       r.contributor AS contributor, 
                       r.subject AS subject, 
                       r.publisher AS publisher, 
+                      TO_DAYS(r.modified) AS modified,
                       GROUP_CONCAT(DISTINCT d.nom_discipline) AS disciplines, 
                       GROUP_CONCAT(DISTINCT d.id_discipline) AS discipline_ids,
                       GROUP_CONCAT(DISTINCT p.nom) AS pays, 
@@ -109,7 +110,8 @@ emit_source('savoirsenpartage_ressources',
                 WHERE r.validated AND (l.spec IS NULL OR l.validated)
                 GROUP BY r.id''',
             sql_query_info='SELECT * from savoirs_record WHERE id=$id',
-            sql_attr_multi=['discipline_ids', 'region_ids']
+            sql_attr_multi=['discipline_ids', 'region_ids'],
+            sql_attr_uint=['modified']
             )
 
 emit_source('savoirsenpartage_actualites',
