--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 newest = false
-parts = django articles harvest sphinx_config
+parts = django articles harvest sphinx_config alertes_courriel
 find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/auf_references_client/
     http://pypi.auf.org/auf_references_modeles/
@@ -35,6 +35,7 @@ eggs = auf_references_client==0.4.9
     South==0.7.3
     django_exportateur==1.0
     python-dateutil==1.5
+    markdown2
     auf.django.admingroup
     MySQL-python
     simplejson
@@ -60,3 +61,9 @@ template = import_chercheurs.in
 recipe = buildout_script
 template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
 template = sphinx.conf.py.in
+
+[alertes_courriel]
+recipe = buildout_script
+template_dir = ${buildout:directory}/auf_savoirs_en_partage/scripts/
+template = alertes_courriel.in
+
