Upgrade django-admingroup

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,8 +35,8 @@ eggs = auf_references_client==0.4.9
     South==0.7.3
     django_exportateur==1.0
     python-dateutil==1.5
+    auf.django.admingroup==0.3dev
     markdown2
-    auf.django.admingroup
     MySQL-python
     simplejson
 
