import gens AUF dans le groupe AUF sans aucune permissions. (module auf.django.auth)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/django-roa/
     http://pypi.auf.org/django_exportateur/
     http://pypi.auf.org/auf.django.admingroup/
+    http://pypi.auf.org/auf.django.auth/
 
 [django]
 recipe = djangorecipe
@@ -36,6 +37,7 @@ eggs = auf_references_client==0.4.9
     django_exportateur==1.0
     python-dateutil==1.5
     auf.django.admingroup==0.3dev
+    auf.django.auth==0.5.1dev
     markdown2
     MySQL-python
     simplejson
