--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/django-roa/
     http://pypi.auf.org/django_exportateur/
     http://pypi.auf.org/auf.django.admingroup/
+    http://pypi.auf.org/auf.django.auth/
 
 [django]
 recipe = djangorecipe
@@ -35,7 +36,8 @@ eggs = auf_references_client==0.4.9
     South==0.7.3
     django_exportateur==1.0
     python-dateutil==1.5
-    auf.django.admingroup
+    auf.django.admingroup==0.3dev
+    auf.django.auth==0.5.2dev
     MySQL-python
     simplejson
 
