Mise en place de filtre avec initiale

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/django_exportateur/
     http://pypi.auf.org/auf.django.admingroup/
     http://pypi.auf.org/auf.django.auth/
+    http://github.com/coordt/django-alphabetfilter/tarball/master#egg=django-alphafilter
 
 [django]
 recipe = djangorecipe
@@ -41,6 +42,7 @@ eggs = auf_references_client==0.4.9
     markdown2
     MySQL-python
     simplejson
+    django-alphafilter
 
 #develop = src/caldav
 
