Utilise le Pypi de l'AUF pour django-alphafilter

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,7 +9,7 @@ find-links = http://pypi.auf.org/caldav/
     http://pypi.auf.org/django_exportateur/
     http://pypi.auf.org/auf.django.admingroup/
     http://pypi.auf.org/auf.django.auth/
-    http://github.com/coordt/django-alphabetfilter/tarball/master#egg=django-alphafilter
+    http://pypi.auf.org/django-alphafilter/
 
 [django]
 recipe = djangorecipe
@@ -42,7 +42,7 @@ eggs = auf_references_client==0.4.9
     markdown2
     MySQL-python
     simplejson
-    django-alphafilter
+    django-alphafilter==0.5.2auf2
 
 #develop = src/caldav
 
