Ressources: Ajout du champ catégorie pour la recherche

--- a/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
+++ b/auf_savoirs_en_partage/scripts/sphinx.conf.py.in
@@ -92,6 +92,7 @@ emit_source('savoirsenpartage_ressources',
                       r.contributor AS contributor, 
                       r.subject AS subject, 
                       r.publisher AS publisher, 
+                      r.categorie_id as categorie,
                       TO_DAYS(r.modified) AS modified,
                       GROUP_CONCAT(DISTINCT d.nom_discipline) AS disciplines, 
                       GROUP_CONCAT(DISTINCT d.id_discipline) AS discipline_ids,
